# scsgmm

./: README.md  pyproject.toml
docs/: GMMs for time series.ipynb
scsgmm/: __init__.py  scsgmm.py
