[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scsgmm"
version = "0.1.0"
description = "Sequential Conditional Sampling from GMMs"
authors = [
           { name = "Mutahar Chalmers", email = "mutahar.chalmers@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12"
dependencies = [ "numpy>=1.26.4", "pandas>=2", "scikit-learn>=1.6",
                 "tqdm>=4.66.2"
]

[project.urls]
"Homepage" = "https://github.com/MutaharChalmers/scsgmm"
